Fix compatibility with 11 Java, fix logging level in properties